# joyce

./: .dockerignore  .editorconfig  .gitignore  .meshrc.yml  404.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev-kafka.yml  docker-compose.yaml  docker-compose.yml  index.html  mesh-server.js  package-lock.json  package.json  pom.xml  sitemap.xml  tsconfig.json
assets/: schemas.json  user.json
blog/: atom.xml  rss.xml
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  versions.json
getting-started/: index.html
import/: docker-compose.yaml  pom.xml
joyce-api/: .editorconfig  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
joyce-common-core/: pom.xml
joyce-connector-core/: pom.xml
joyce-import-core/: README.md  pom.xml
joyce-import-gateway/: Dockerfile  pom.xml
joyce-kafka-connect/: Dockerfile  README.md  docker-compose.yaml
joyce-mongodb-sink/: docker-compose.yaml  pom.xml
joyce-protobuf/: pom.xml
joyce-schema-core/: pom.xml
joyce-schema-engine/: README.md  pom.xml
joyce-test/: pom.xml
nile-common-core/: .factorypath  pom.xml
nile-connector-core/: pom.xml
nile-import-core/: README.md  pom.xml
nile-import-gateway/: pom.xml
nile-ingestion-ce/: pom.xml
nile-ingestion-core/: README.md  pom.xml
tests/: Makefile  common.py  docker-compose.yaml  pyproject.toml  schemas.json  waiturl.sh
tests/resources/: import-user.yaml  user-schema.json
tests/tests/: test_readme.py  test_release_130.py
(+973 files in other folders)
